# news

./: .gitignore  README.md  pyproject.toml
.github/workflows/: digest.yaml
config/: container-technologies.yaml  embedded-yocto.yaml  image-based-linux.yaml  security-bulletins.yaml
digests/container-technologies/: 2026-01-25.md  2026-02-01.md  2026-02-08.md  2026-02-15.md  2026-02-22.md  2026-03-01.md  2026-03-08.md  2026-03-15.md  2026-03-22.md  2026-03-29.md  2026-04-05.md  2026-04-12.md  2026-04-19.md  2026-04-26.md  2026-05-03.md  2026-05-10.md  2026-05-17.md
digests/embedded-yocto/: 2026-01-18.md  2026-01-25.md  2026-02-01.md  2026-02-08.md  2026-02-15.md  2026-02-22.md  2026-03-01.md  2026-03-08.md  2026-03-15.md  2026-03-22.md  2026-03-29.md  2026-04-05.md  2026-04-12.md  2026-04-19.md  2026-04-26.md  2026-05-03.md  2026-05-10.md  2026-05-17.md
digests/image-based-linux/: 2026-01-18.md  2026-01-25.md  2026-02-01.md  2026-02-08.md  2026-02-15.md  2026-02-22.md  2026-03-01.md  2026-03-08.md  2026-03-15.md  2026-03-22.md  2026-03-29.md  2026-04-05.md  2026-04-12.md  2026-04-19.md  2026-04-26.md  2026-05-03.md  2026-05-10.md  2026-05-17.md
digests/security-bulletins/: 2026-03-22.md  2026-03-29.md  2026-04-05.md  2026-04-12.md  2026-04-19.md  2026-04-26.md  2026-05-03.md  2026-05-10.md  2026-05-17.md
docs/: cloud-native-vs-atomic-os.md  infrastructure-provisioning-comparison.md
prompts/: container-technologies.md  embedded-yocto.md  image-based-linux.md  security-bulletins.md
src/digest/: __init__.py  config.py  filters.py  main.py  models.py  state.py  (+2 more)
(+14 files in other folders)
